--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Character Configs
+CHARACTER_NAME=samantha
+
 # Cache Configs
 CACHE_STORE=database # Defaults to database. Other available cache store: redis and filesystem
 REDIS_URL= # Redis URL - could be a local redis instance or cloud hosted redis. Also support rediss:// urls
