--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,11 @@ on:
         - 'v[0-9]+.[0-9]+.[0-9]+'
     workflow_dispatch:
 
+env:
+    REGION: eu-central-1
+    ECR_REPOSITORY: eliza
+    CONTAINER_NAME: eliza
+
 jobs:
   build:
     name: Build Image
@@ -34,11 +39,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{vars.AWS_REGION}}
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+          aws-region: ${{env.REGION}}
 
       - name: Set Image Tag and Repository Name
         id: set-vars
@@ -53,15 +54,19 @@ jobs:
           REPO_NAME=$(node -p "require('./package.json').name")
           echo "repository=$REPO_NAME" >> $GITHUB_OUTPUT
 
-      - name: Create ECR repository if not exists
-        run: |
-          aws ecr describe-repositories --repository-names ${{ steps.set-vars.outputs.repository }} || \
-          aws ecr create-repository --repository-name ${{ steps.set-vars.outputs.repository }}
+      #- name: Create ECR repository if not exists
+      #  run: |
+      #    aws ecr describe-repositories --repository-names ${{ steps.set-vars.outputs.repository }} || \
+      #    aws ecr create-repository --repository-name ${{ steps.set-vars.outputs.repository }}
+
+      -   name: Login to Amazon ECR
+          id: login-ecr
+          uses: aws-actions/amazon-ecr-login@v1
 
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ steps.set-vars.outputs.repository }}
+          ECR_REPOSITORY: ${{env.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ steps.set-vars.outputs.tag }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
