--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "lint": "bash ./scripts/lint.sh",
         "prettier-check": "npx prettier --check --cache .",
         "prettier": "npx prettier --write --cache .",
-        "release": "pnpm build && pnpm prettier && npx lerna publish --no-private --force-publish",
+        "release:lerna": "pnpm build && pnpm prettier && npx lerna publish --no-private --force-publish",
         "clean": "bash ./scripts/clean.sh",
         "docker:build": "bash ./scripts/docker.sh build",
         "docker:run": "bash ./scripts/docker.sh run",
@@ -22,7 +22,9 @@
         "docker": "pnpm docker:build && pnpm docker:run && pnpm docker:bash",
         "test": "bash ./scripts/test.sh",
         "smokeTests": "bash ./scripts/smokeTests.sh",
-        "integrationTests": "bash ./scripts/integrationTests.sh"
+        "integrationTests": "bash ./scripts/integrationTests.sh",
+        "release": "standard-version -a",
+        "release:pub": "git push --follow-tags origin $(git rev-parse --abbrev-ref HEAD)"
     },
     "devDependencies": {
         "@commitlint/cli": "18.6.1",
@@ -43,7 +45,8 @@
         "typescript": "5.6.3",
         "vite": "5.4.11",
         "vitest": "2.1.5",
-        "viem": "2.21.58"
+        "viem": "2.21.58",
+        "standard-version": "^9.5.0"
     },
     "pnpm": {
         "overrides": {
@@ -69,5 +72,6 @@
     "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee",
     "workspaces": [
         "packages/*"
-    ]
+    ],
+    "version": "1.0.0-dev.0"
 }
