--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,16 +23,16 @@ jobs:
         with:
           submodules: recursive # This ensures submodules are checked out
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          draft: false
-          prerelease: false
+    #   - name: Create Release
+    #     id: create_release
+    #     uses: actions/create-release@v1
+    #     env:
+    #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     with:
+    #       tag_name: ${{ github.ref }}
+    #       release_name: ${{ github.ref }}
+    #       draft: false
+    #       prerelease: false
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
