--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,11 +7,6 @@ on:
         - 'v[0-9]+.[0-9]+.[0-9]+'
     workflow_dispatch:
 
-env:
-    REGION: eu-central-1
-    ECR_REPOSITORY: eliza
-    CONTAINER_NAME: eliza
-
 jobs:
   build:
     name: Build Image
@@ -22,17 +17,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive # This ensures submodules are checked out
-
-    #   - name: Create Release
-    #     id: create_release
-    #     uses: actions/create-release@v1
-    #     env:
-    #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #     with:
-    #       tag_name: ${{ github.ref }}
-    #       release_name: ${{ github.ref }}
-    #       draft: false
-    #       prerelease: false
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -54,11 +38,6 @@ jobs:
           REPO_NAME=$(node -p "require('./package.json').name")
           echo "repository=$REPO_NAME" >> $GITHUB_OUTPUT
 
-      #- name: Create ECR repository if not exists
-      #  run: |
-      #    aws ecr describe-repositories --repository-names ${{ steps.set-vars.outputs.repository }} || \
-      #    aws ecr create-repository --repository-name ${{ steps.set-vars.outputs.repository }}
-
       -   name: Login to Amazon ECR
           id: login-ecr
           uses: aws-actions/amazon-ecr-login@v1
@@ -66,9 +45,9 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{env.ECR_REPOSITORY }}
+          ECR_REPOSITORY: ${{ steps.set-vars.outputs.repository }}
           IMAGE_TAG: ${{ steps.set-vars.outputs.tag }}
           CHARACTER_NAME : ${{vars.CHARACTER_NAME}}
         run: |
-          CHARACTER_NAME=$CHARACTER_NAME docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          CHARACTER_NAME=$CHARACTER_NAME docker build --platform linux/amd64 --build-arg BUILDKIT_INLINE_CACHE=1 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
