--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "eliza",
+    "version": "1.0.0",
     "scripts": {
         "preinstall": "npx only-allow pnpm",
         "build": "turbo run build",
@@ -24,6 +25,7 @@
         "smokeTests": "bash ./scripts/smokeTests.sh",
         "integrationTests": "bash ./scripts/integrationTests.sh",
         "release": "standard-version -a",
+        "release:dev": "standard-version -a --prerelease dev",
         "release:pub": "git push --follow-tags origin $(git rev-parse --abbrev-ref HEAD)"
     },
     "devDependencies": {
@@ -72,6 +74,5 @@
     "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee",
     "workspaces": [
         "packages/*"
-    ],
-    "version": "1.0.0"
+    ]
 }
