--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,9 @@ on:
         - 'v[0-9]+.[0-9]+.[0-9]+'
     workflow_dispatch:
 
+env:
+    REGION: eu-central-1
+
 jobs:
   build:
     name: Build Image
