chore: implament lauren

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Character Configs
-CHARACTER_NAME=samantha
+CHARACTER_NAME=lauren
 
 # Cache Configs
 CACHE_STORE=database # Defaults to database. Other available cache store: redis and filesystem
@@ -64,14 +64,14 @@ ELEVENLABS_OPTIMIZE_STREAMING_LATENCY=4
 ELEVENLABS_OUTPUT_FORMAT=pcm_16000
 
 # Twitter/X Configuration
-TWITTER_DRY_RUN=false
+TWITTER_DRY_RUN=true
 TWITTER_USERNAME=               # Account username
 TWITTER_PASSWORD=               # Account password
 TWITTER_EMAIL=                  # Account email
 TWITTER_2FA_SECRET=
 
-TWITTER_POLL_INTERVAL=120       # How often (in seconds) the bot should check for interactions
-TWITTER_SEARCH_ENABLE=FALSE     # Enable timeline search, WARNING this greatly increases your chance of getting banned
+TWITTER_POLL_INTERVAL=540       # How often (in seconds) the bot should check for interactions
+TWITTER_SEARCH_ENABLE=false     # Enable timeline search, WARNING this greatly increases your chance of getting banned
 TWITTER_TARGET_USERS=           # Comma separated list of Twitter user names to interact with
 TWITTER_RETRY_LIMIT=            # Maximum retry attempts for Twitter login
 TWITTER_SPACES_ENABLE=false     # Enable or disable Twitter Spaces logic
@@ -83,10 +83,10 @@ XAI_MODEL=
 # Post Interval Settings (in minutes)
 POST_INTERVAL_MIN=              # Default: 90
 POST_INTERVAL_MAX=              # Default: 180
-POST_IMMEDIATELY=
+POST_IMMEDIATELY=false
 
 # Twitter action processing configuration
-ACTION_INTERVAL=      # Interval in minutes between action processing runs (default: 5 minutes)
+ACTION_INTERVAL=20      # Interval in minutes between action processing runs (default: 5 minutes)
 ENABLE_ACTION_PROCESSING=false   # Set to true to enable the action processing loop
 
 # Feature Flags
